[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/assets/Bunny_Boss_Sprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/bunny_boss.gd" type="Script" id=2]
[ext_resource path="res://scenes/instance/NotePlayer.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.9757, 56.0566 )

[node name="bunny_boss_entity" type="KinematicBody2D"]
position = Vector2( -1.67021, 10.0212 )
script = ExtResource( 2 )

[node name="Bunny_Boss_Sprite" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.96947, -77.2966 )
shape = SubResource( 1 )

[node name="NotePlayer" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
